# thumpy

./: Pipfile  README.md  pyproject.toml  requirements.txt  thumpy.py
